--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About the man... the legend</h1>
 <p>I started my journey on the East.. traveled to the West and then soon far beyond the misty mountains. Now I'm back on the West to see what new journeys will arise.</p>
+<p> Sign up <%= link_to "here", "ggop"%></P>
