--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>AK on that nightstand</h1>
-<p>Right next to that Sidor </p>
+<div class="jumbotron center">
+
+
+<h1><font color= #ecf0f1>Welcome to my first website</h1></font>
+<%= link_to "Watch Osuri Lick Balls", "#", class: "btn btn-danger btn-lg" %>
+<%= link_to "Login", "#", class: "btn btn-default btn-lg" %>
+<%= link_to "Sign Up", "#", class: "btn btn-success btn-lg" %>
+
+</div>
