A few more updates

--- a/app/assets/stylesheets/Bootstrap_and_Customization.css.scss
+++ b/app/assets/stylesheets/Bootstrap_and_Customization.css.scss
@@ -1,5 +1,8 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+$font-family-sans-serif: 'lato', 'helvetica Neue', helvetica, arial, sans-serif;
 $body-bg:    #FFE700;
 $navbar-default-bg: #510FAD;
+$navbar-height: 45px;
 $navbar-default-link-color: #ecf0f1;
 $navbar-default-link-hover-color: #FFE700;
 $navbar-default-brand-hover-color: #FFE700;
