--- a/app/views/layouts/_header.html
+++ b/app/views/layouts/_header.html
@@ -16,10 +16,13 @@
     <ul class="nav navbar-nav">
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "home", root_path %> </li>
-      <li><%= link_to "about", about_path %> </li>
-      <li><%= link_to "ggop", ggop_path %> </li>
-      <li><%= link_to "laura", laura_path %> </li>
+      <li><%= link_to "About", about_path %> </li>
+      <li><%= link_to "GGop", ggop_path %> </li>
+      <li><%= link_to "Laura", laura_path %> </li>
+      <% if user_signed_in?%>
+      <li><%= link_to "logout", destroy_user_session_path, method: :delete %> </li>
+        <%end%>
+
     </ul>
   </div><!-- /.navbar-collapse -->
 </div><!-- Container for navbar-->
