--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,12 @@
 
 
 <h1><font color= #ecf0f1>Welcome to my first website</h1></font>
-<%= link_to "Watch Osuri Lick Balls", "#", class: "btn btn-danger btn-lg" %>
-<%= link_to "Login", "#", class: "btn btn-default btn-lg" %>
-<%= link_to "Sign Up", "#", class: "btn btn-success btn-lg" %>
 
+<% if user_signed_in? %><br>
+<%= link_to "Watch Osuri Lick Balls", "#", class: "btn btn-success btn-lg" %></br>
+<% else %>
+<%= link_to "Login", new_user_session_path, class: "btn btn-default btn-lg" %>
+<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success btn-lg" %>
+
+<%end%>
 </div>
