--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,7 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Looks like you forgot your password. Let's try to get you all set-up again so you can enjoy the bad-assery on the site.</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>If you didn't request this, it's possible you're getting trolled. Not to worry, I'm sure there are much worse things they could have done to you ^^</p>
