--- a/app/views/layouts/_header.html
+++ b/app/views/layouts/_header.html
@@ -20,6 +20,7 @@
       <li><%= link_to "GGop", ggop_path %> </li>
       <li><%= link_to "Laura", laura_path %> </li>
       <% if user_signed_in?%>
+      <li><%= link_to "Account", edit_user_registration_path%> </li>
       <li><%= link_to "logout", destroy_user_session_path, method: :delete %> </li>
         <%end%>
 
