--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <h1><font color= #ecf0f1>Welcome to my first website</h1></font>
 
 <% if user_signed_in? %><br>
-<%= link_to "Watch Osuri Lick Balls", "#", class: "btn btn-success btn-lg" %></br>
+<%= link_to "Watch Osuri circa 1989", "http://www.youtube.com/watch?v=HUcPeMs871k", class: "btn btn-success btn-lg" %></br>
 <% else %>
 <%= link_to "Login", new_user_session_path, class: "btn btn-default btn-lg" %>
 <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success btn-lg" %>
