--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -10,17 +10,17 @@
       </ul>
     </div>
   <% end %>
-<div class="image">
-    <%= f.label :description %><br>
+
+  <div class="form-group">
+    <%= f.label :image %>
     <%= f.file_field :image, class: "form-control" %>
   </div>
 
-
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_field :description, class: "form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
