added glyph icons and changing route to /pins

--- a/app/views/pages/ggop.html.erb
+++ b/app/views/pages/ggop.html.erb
@@ -1,2 +1,2 @@
-<h1>GGOPs page to ball out on</h1>
-<p>here's to the brothers of Sigma.</p>
+<h1>My first web page</h1>
+<p>Made for me, by me. Splendid Days!</p>
