--- a/app/views/layouts/_header.html
+++ b/app/views/layouts/_header.html
@@ -16,13 +16,13 @@
     <ul class="nav navbar-nav">
     </ul>
     <ul class="nav navbar-nav navbar-right">
+       <li><%= link_to raw('<span class="glyphicon glyphicon-plus"></span> New Pin'),  new_pin_path %> 
+      </li>
       <li><%= link_to "About", about_path %> </li>
       <li><%= link_to "GGop", ggop_path %> </li>
-      <li><%= link_to "Laura", laura_path %> </li>
       <% if user_signed_in?%>
-      <li><%= link_to "New Pin", new_pin_path %> </li>
       <li><%= link_to "Account", edit_user_registration_path%> </li>
-      <li><%= link_to "logout", destroy_user_session_path, method: :delete %> </li>
+      <li><%= link_to "Logout", destroy_user_session_path, method: :delete %> </li>
         <%end%>
 
     </ul>
