--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'pages/home' unless user_signed_in? %>
+
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
@@ -6,9 +8,9 @@
           <%= pin.description %>
           <%= pin.user.email if pin.user %>
           <% if pin.user == current_user%>
-          <div class= actions>
-            <%= link_to 'Edit', edit_pin_path(pin) %>
-            <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <div class= actions><p>
+            <%= link_to raw('<span class="glyphicon glyphicon-pencil"></span>Edit'), edit_pin_path(pin) %>
+            <%= link_to raw('<span class="glyphicon glyphicon-remove"></span> Remove') , pin, method: :delete, data: { confirm: 'Are you sure?' } %></P>
           </div>
           <%end%>
         </div>  
