--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -4,13 +4,13 @@
 <div class= "panel panel-default">
 	<div class= "panel-heading center">
 				<%= image_tag @pin.image.url(:medium) %>
-		<div class="panel-body">	
+		<div class="panel-body">
 			  <p><%= @pin.description %></p>
 			  <p><%= @pin.user.email %></p>
 		
 		<% if @pin.user == current_user %>
-		<%= link_to 'Edit', edit_pin_path(@pin) %> 
-		<%= link_to 'Destroy', @pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+		 <%= link_to raw('<span class="glyphicon glyphicon-pencil"></span>Edit'), edit_pin_path(@pin) %>
+            <%= link_to raw('<span class="glyphicon glyphicon-remove"></span> Remove') ,@pin, method: :delete, data: { confirm: 'Are you sure?' } %></P>
 		<%end%>
 </div>
 	</div>
