changed order of pins added

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,7 @@
-<center><h1>About the man... the legend</h1>
-<font-size:24></font><p>I started my journey on the East.. traveled to the West and then soon far beyond the misty mountains. Now I'm back on the West to see what new journeys will arise.</p>
+<center><h1>Why make Pinteresting?</h1>
+<font-size:24></font><p>
+
+Simple... it's my first webapge and it's simple! Also One Month Rails recommends it be called this :)<P>
+
+Though many consider me a great hustler or whatever you may call it, I've decided to pick up coding and start with this site. I feel like in the near future, the skills of the past will not get us as far as they used to. I'm learning to code to have more control of my projects and more respect for the work others do around me. I'm learning the technology behind the things around us, understand fundamental concepts, and learning how I can add value in this new ecosystem. And in a perfect world, I might just end up building something I really care about without having to ask for help from others, but don't count on it :)</p>
 <p> Sign up <%= link_to "here", "ggop"%></P></center></font>
