--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -6,7 +6,7 @@
 				<%= image_tag @pin.image.url(:medium) %>
 		<div class="panel-body">
 			  <p><%= @pin.description %></p>
-			  <p><%= @pin.user.email %></p>
+			  <p><%= @pin.user.name %></p>
 		
 		<% if @pin.user == current_user %>
 		 <%= link_to raw('<span class="glyphicon glyphicon-pencil"></span>Edit'), edit_pin_path(@pin) %>
