--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,9 @@
 <center><h1>Why make Pinteresting?</h1>
-<font-size:24></font><p>
 
-Simple... it's my first webapge and it's simple! Also One Month Rails recommends it be called this :)<P>
+<p><h2>Well... it's my first project and it's simple! Through building this I was able to get familiar with using my terminal, pushing to Github, migrating to Heroku, installing gems in ruby, integrating Bootstrap, cusomizing style sheets, going through error logs, and uploading files to AWS.</p></h2>
 
-Though many consider me a great hustler or whatever you may call it, I've decided to pick up coding and start with this site. I feel like in the near future, the skills of the past will not get us as far as they used to. I'm learning to code to have more control of my projects and more respect for the work others do around me. I'm learning the technology behind the things around us, understand fundamental concepts, and learning how I can add value in this new ecosystem. And in a perfect world, I might just end up building something I really care about without having to ask for help from others, but don't count on it :)</p>
-<p> Sign up <%= link_to "here", "ggop"%></P></center></font>
+<p><h3>I did all this through a tutorial called <%=link_to "One Month Rails", "http://www.onemonthrails.com"	%>. I highly recommend it for anyone starting out. </P></h3>
+
+<h3><p>Though many consider me a great hustler or whatever you may call it, I've decided to pick up the basics in coding as well. I'm learning to code to have more control of my projects and more respect for the work others do around me. I wrote a blog post about my journey <%= link_to "here", "https://medium.com/p/eab1eb96a23" %> if you're interested in learning more</h3>
+
+<br><h4> PS: I'm 2 weeks in... Don't give me shit about the color scheme ^^ </h4>	</br></center>
