--- a/app/views/pages/ggop.html.erb
+++ b/app/views/pages/ggop.html.erb
@@ -1,2 +1,3 @@
 <h1>My first web page</h1>
-<p>Made for me, by me. Splendid Days!</p>
+<h2><br>Made by me. For me. Splendid Days!</h2></br>	
+<h3> In other news I've <%= link_to "just saved 15%", "http://www.youtube.com/watch?v=8t8jo4cMGIU" %> on my car insurance!</h3>
