--- a/app/assets/stylesheets/pins.css.scss
+++ b/app/assets/stylesheets/pins.css.scss
@@ -8,7 +8,13 @@
 }
 
 
-
 .box img {
   width: 100%;
 }
+
+.panel-default {
+  border-color: #FFE700; }
+  .panel-default > .panel-heading {
+    color: #333333;
+    background-color: white;
+    border-color: #FFE700; }
