--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'pages/home' unless user_signed_in? %>
 <header>
-  <br><center><h1> Welcome to the Pin Board!</h1></center></br> 
+  <center><h2> Welcome to the Pin Board!</h2></center>
   </header>
 
 <div id="pins" class="transitions-enabled">
